2019-10-23 Søren Højsgaard <sorenh@math.aau.dk>

	* taylor function added

	* fev data from isdals added

	* lmBy reintroduced due to popular demand.

	* LE_matrix etc. handles a dataframe correctly for the 'at' argument

	* Version 4.6-3 uploaded
	
	
2018-08-30 Søren Højsgaard <sorenh@math.aau.dk>
	
	* sampleBy and lapplyBy functions reintroduced due to popular demand.

	* Version 4.6-2 uploaded
	
2018-03-19 Søren Højsgaard <sorenh@math.aau.dk>

	* Previous functionality of core xxBy-functions reestablished to
	ensure that downstream packages work.

	* Version 4.6-1 uploaded.

2018-03-04 Søren Højsgaard <sorenh@math.aau.dk>

	* Improvements of esticon and linest; methods added.

	* Improvements of LSmeans vignette.

	* Version 4.6-0 uploaded.
	
2016-01-01 Søren Højsgaard <sorenh@math.aau.dk>

	* Converted to roxygen format

	* Many of the less useful by functions are removed.

	* Put on github
	
2016-02-15 Søren Højsgaard <sorenh@math.aau.dk>

	* Updated with version requirement for R version
	
	* slurry data added
	
	* Version 4.5-15 uploaded.
	
2015-11-25 Søren Højsgaard <sorenh@math.aau.dk>

	* NAMESPACE file updated with S3 registrations

	* potatoes dataset added
	
2014-12-07 Søren Højsgaard <sorenh@math.aau.dk>

	* Bug fixed in LSmatrix; thanks to Ida Bulow Christensen for the
	bug report.

2014-11-11 Søren Højsgaard <sorenh@math.aau.dk>

	* linest now accepts K=NULL, in which case K is taken to be the
	diagonal materix

	* No longer Depend(s) on MASS

	* Some datasets added

	* Version 4.5-12 uploaded.

2014-09-26 Søren Højsgaard <sorenh@math.aau.dk>

	* summaryBy did not check if each element in FUN was a
	function. Fixed now.

	* Version 4.5-11 uploaded.

2014-09-08 Søren Højsgaard <sorenh@math.aau.dk>

	* Added the 'haldCement' data

	* lapplyBy: Argument keep.groupid added

	* nullBasis function/method added

	* popMeans function re-introduced (just a different name for
	LSmeans)

	* dose.LD50 removed; car::deltaMethod can probably do the same.
