@@ -1,4 +1,9 @@
 2019-10-23 Søren Højsgaard <sorenh@math.aau.dk>
+	
+	* cropyield data added.
+
+	
+2019-10-23 Søren Højsgaard <sorenh@math.aau.dk>
 
 	* taylor function added
 
